--- a/app/.env.example
+++ b/app/.env.example
@@ -1,5 +1,5 @@
-APP_NAME=app-dashboard-next
-APP_QUOTES="Belanja di App"
+APP_NAME=contact-collection-next
+APP_QUOTES="Contact App"
 APP_VERSION=latest
 APP_URL=http://localhost:3003
 APP_SITE=localhost:3003
@@ -12,3 +12,4 @@ GENERATE_SOURCEMAP=false
 PUBLIC_URL=/
 REACT_APP_API_URL=http://localhost:4003/graphql
 REACT_CHANNEL="app"
+REACT_USER_UUID=de4e31bd-393d-40f7-86ae-ce8e25d81b00
