--- a/app/.env.example
+++ b/app/.env.example
@@ -13,3 +13,6 @@ PUBLIC_URL=/
 REACT_APP_API_URL=http://localhost:4003/graphql
 REACT_CHANNEL="app"
 REACT_USER_UUID=de4e31bd-393d-40f7-86ae-ce8e25d81b00
+
+ENV_REACT_APP_API_URL=http://localhost:4003/graphql
+REACT_USER_UUID=de4e31bd-393d-40f7-86ae-ce8e25d81b00
