--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -10,7 +10,8 @@ COPY entrypoint.sh /entrypoint.sh
 RUN chmod a+x /entrypoint.sh
 #RUN sed -i -e 's/\r$//' entrypoint.sh
 ENV ENV_REACT_APP_API_URL $ENV_REACT_APP_API_URL
-ENV REACT_USER_UUID $REACT_USER_UUID
+ENV ENV_REACT_CHANNEL $ENV_REACT_CHANNEL
+ENV ENV_REACT_USER_UUID $ENV_REACT_USER_UUID
 
 ENTRYPOINT ["/entrypoint.sh"]
 EXPOSE 3003
