--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.31",
     "copyfiles": "^2.2.0",
+    "dotenv": "^16.3.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^5.1.6"
