--- a/api/.env.example
+++ b/api/.env.example
@@ -2,7 +2,7 @@ DEV_MODE=true
 NODE_ENV=development
 
 MYSQLDB_USER=root
-MYSQLDB_ROOT_PASSWORD=Password8
+MYSQLDB_ROOT_PASSWORD=
 MYSQLDB_DATABASE=db_phone_book
 MYSQLDB_LOCAL_PORT=3306
 MYSQLDB_HOST=db-host
